# demo-python-software-testing

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/package_name/: module.py
tests/: test_package_module.py  test_with_hypothesis.py  test_with_hypothesis_generated.py
